# crat

./: .gitignore  Cargo.toml  LICENSE  README.md  extract-global.py  rust-toolchain.toml  tool.py
.github/workflows/: ci.yml
benchmarks/bin-tests/: binn-3.0.txt  brubeck.txt  fzy.txt  genann-1.0.0.txt  libaco.txt  libcsv.txt  libqrencode.txt  pth-2.0.7.txt  tulipindicators.txt
benchmarks/script-tests/: brotli-1.0.9.sh  bzip2.sh  c-thread-pool.sh  cava.sh  cflow-1.7.sh  cpio-2.14.sh  diffutils-3.10.sh  dump1090.sh  ed-1.19.sh  enscript-1.6.6.sh  findutils-4.9.0.sh  gawk-5.2.2.sh  grep-3.11.sh  gzip-1.12.sh  hello-2.12.1.sh  hiredis.sh  indent-2.2.13.sh  libosip2-5.3.1.sh  make-4.4.1.sh  mcsim-6.2.0.sh  minilisp.sh  patch-2.7.6.sh  php-rdkafka.sh  pigz.sh  pocketlang.sh  prepare  rcs-5.10.1.sh  sed-4.9.sh  snoopy.sh  streem.sh  tar-1.34.sh  the_silver_searcher.sh  tinyproxy.sh  twemproxy.sh  units-2.22.sh  uthash.sh  webdis.sh  wget-1.21.4.sh
configs/resolve/: less-633.toml  snoopy.toml
crates/array_replacer/: Cargo.toml
crates/finders/: Cargo.toml
crates/io_replacer/: Cargo.toml
crates/io_replacer/src/: error_analysis.rs  file_analysis.rs  lib.rs  likely_lit.rs  mir_loc.rs  tests.rs
crates/io_replacer/src/transformation/: close.rs  fflush.rs  fgetc.rs  fgets.rs  fileno.rs  flockfile.rs  fopen.rs  fprintf.rs  fputc.rs  fputs.rs  fread.rs  fscanf.rs  fseek.rs  fwrite.rs  getdelim.rs  hir_ctx.rs  mod.rs  popen.rs  stream_ty.rs  transform.rs  visitor.rs
crates/mut_replacer/: Cargo.toml
crates/passes/: Cargo.toml
crates/pointer_replacer/: Cargo.toml
crates/pointer_replacer/src/: lib.rs
crates/pointer_replacer/src/analyses/: encoding.rs  lattice.rs  liveness.rs  mir_variable_grouping.rs  mod.rs
crates/pointer_replacer/src/analyses/alias/: constraint.rs  mod.rs
crates/pointer_replacer/src/analyses/alias/steensgaard/: location.rs  mod.rs  strategies.rs
crates/pointer_replacer/src/analyses/alias/steensgaard/constraint/: generation.rs  mod.rs  watcher.rs
crates/pointer_replacer/src/analyses/borrow/: errors.rs  invalidates.rs  killed.rs  loan_liveness.rs  mod.rs  places_conflict.rs  provenance_liveness.rs  requires.rs  subset_closure.rs
crates/pointer_replacer/src/analyses/mir/: mod.rs  terminator.rs  ty.rs
crates/pointer_replacer/src/analyses/output_params/: eliminable_temporaries.rs  mod.rs
crates/pointer_replacer/src/analyses/type_qualifier/: mod.rs
crates/pointer_replacer/src/analyses/type_qualifier/foster/: constraint_system.rs  mod.rs
crates/pointer_replacer/src/analyses/type_qualifier/foster/fatness/: libc.rs  library.rs  mod.rs
crates/pointer_replacer/src/analyses/type_qualifier/foster/mutability/: libc.rs  library.rs  mod.rs
crates/pointer_replacer/src/rewriter/: collector.rs  decision.rs  mod.rs
crates/pointer_replacer/src/rewriter/transform/: mod.rs  post.rs
crates/pointer_replacer/src/utils/: mod.rs  rustc.rs
crates/pointer_replacer/src/utils/dsa/: fixed_shape.rs  mod.rs  union_find.rs
crates/points_to/: Cargo.toml
crates/static_replacer/: Cargo.toml
crates/union_replacer/: Cargo.toml
crates/utils/: Cargo.toml
deps_crate/: Cargo.toml
examples/sum/: .gitignore  Makefile  main.c  sum.c  sum.h
src/: assert_deduper.rs  ast_util.rs  bin_file_adder.rs  check_unsafety.rs  compile_util.rs  disjoint_set.rs  equiv_classes.rs  expander.rs  formatter.rs  graph_util.rs  ir_util.rs  lib.rs  libc_replacer.rs  preprocessor.rs  splitter.rs  ty_shape.rs  type_checker.rs  unexpander.rs
src/ast_hir/: mod.rs  tests.rs
src/extern_resolver/: mod.rs  tests.rs  type_resolver.rs
src/finder/: enum_finder.rs  example.rs  global_finder.rs  macro_finder.rs  mapper.rs  mir.rs  mod.rs  (+1 more)
(+4371 files in other folders)
