[package]
name = "crat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
etrace = { version = "1.1.1" }
typed-arena = "2.0.2"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.8.23"
toml_edit = "0.22.27"

[package.metadata.rust-analyzer]
rustc_private = true
