[workspace]
members = [
  "crates/finders",
  "crates/pointer_replacer",
  "crates/utils",
]
exclude = ["deps_crate"]

[package]
name = "crat"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
etrace = "1.1.1"
typed-arena = "2.0.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.107"
toml = "0.8.23"
toml_edit = "0.22.27"
lazy_static = "1.5.0"
tracing = "0.1.41"

[dependencies]
finders = { path = "crates/finders" }
pointer_replacer = { path = "crates/pointer_replacer" }
utils = { path = "crates/utils" }
clap = { version = "4.5.40", features = ["derive"] }
tracing-subscriber = "0.3.19"
etrace.workspace = true
typed-arena.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
toml_edit.workspace = true
lazy_static.workspace = true
tracing.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
