[package]
name = "io_replacer"
version = "0.1.0"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
etrace.workspace = true
typed-arena.workspace = true
tracing.workspace = true
lazy_static.workspace = true
toml_edit.workspace = true

[package.metadata.rust-analyzer]
rustc_private = true
